--- a/packages.Rmd
+++ b/packages.Rmd
@@ -60,7 +60,7 @@ knitr::opts_chunk$set(echo = FALSE)
 </th>
 <th style="font-weight:normal;">
 <br>
-[![](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip) The `geotargets` package is a `targets` workflow framework for geospatial data, focusing on the integration between `targets` and geospatial storage formats. It currently supports raster and vector formats created by `terra` and is progressively adding support for `sf`, and `stars`. For example, `tar_terra_rast()` allows you to work with `terra` `SpatRaster` objects.
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) The `geotargets` package is a `targets` workflow framework for geospatial data, focusing on the integration between `targets` and geospatial storage formats. It currently supports raster and vector formats created by `terra` and is progressively adding support for `sf`, and `stars`. For example, `tar_terra_rast()` allows you to work with `terra` `SpatRaster` objects.
 <br><br>
 </th>
 </tr>
